# VINS_SPSG_scanning_deep

./: .gitignore  install.sh
catkin_ws_scanning_ekf_ver2/config/: knu_rviz_config.rviz
catkin_ws_scanning_ekf_ver2/config/kitti_config_00_02/: camLeftResize.yaml  camRightResize.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/kitti_config_03/: camLeftResize.yaml  camRightResize.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/kitti_config_04_12/: camLeftResize.yaml  camRightResize.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/kitti_config_13-21/: camRightResize.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_A_V2/: camLeftResize.yaml  parking_crvlResizeIMU.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_B_V2/: camRightResize.yaml  parking_crvlResizeIMU.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_ver1/: parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_ver2/: camLeftResize.yaml  camRightResize.yaml  imu_vo_cfg.yaml  imuless_vo_cfg.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_ver3/: camLeftResize.yaml  camRightResize.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_ver_EuRoC/: camLeftResize.yaml  camRightResize.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/config/parking_fle3_ver_TUM/: camLeftResize.yaml  camRightResize.yaml  imu_vo_cfg.yaml  imuless_vo_cfg.yaml  parking_crvlResize.yaml
catkin_ws_scanning_ekf_ver2/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/: CMakeLists.txt  package.xml
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/launch/: vins_odom_stereoIMULess_parking_crvl.launch  vins_odom_stereoIMU_parking_crvl_EuRoC.launch  vins_odom_stereoIMU_parking_crvl_ver1.launch  vins_odom_stereoIMU_parking_crvl_ver2.launch  vins_odom_stereoIMU_parking_crvl_ver3.launch  vins_odom_stereo_kitti_00_02.launch  vins_odom_stereo_kitti_03.launch  vins_odom_stereo_kitti_04_12.launch
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/src/: cvt_odometry.cpp  rosLidarNode.cpp  rosNodeTest.cpp  sync_node.cpp
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h  feature_tracker_origin.cpp  kdtree.h  stereoBlockMatching.cpp  stereoBlockMatching.h  stereoBlockMatching_new.cpp
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/src/initial/: initial_alignment.h
catkin_ws_scanning_ekf_ver2/src/VINS-Fusion/vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp
(+19 files in other folders)
